<resources>
    <string name="app_name">MFuebbbb</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_driver_home">DriverHomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string-array name="array_Car_Make">
        <item>Mercedes-Benz</item>
        <item> Audi</item>
        <item>Honda</item>
        <item> Nissan</item>
        <item>Volkswagon</item>
        <item> Subaru</item>
        <item>Toyota</item>
        <item> Lamborghini</item>
        <item>Jeep</item>
        <item> Genesis</item>
        <item>Maserati</item>
        <item> Lexus</item>
        <item>Cadillac</item>
        <item> A3</item>
        <item>A-Class</item>
        <item> A3</item>
    </string-array>

    <string-array name="array_Car_Model">
        <item>A-Class</item>
        <item> A3</item>
        <item>A5</item>
        <item> A6</item>
        <item>A6 allroad</item>
        <item> A7</item>
        <item>Kicks</item>
        <item> Altima</item>
        <item>Armada</item>
        <item> Arteon</item>
        <item>Ascent</item>
        <item> Carola</item>
        <item>Avendor</item>
        <item> Grecale</item>
        <item>A-Class</item>
        <item> LYRIQ</item>
        <item>LS</item>
        <item> LX</item>
        <item>Legacy</item>
        <item> Land Cruiser</item>
        <item>R8</item>
        <item> RAV4</item>
        <item>RC</item>
        <item> Rogue</item>
        <item>RX</item>
        <item> RZ</item>
        <item>S4</item>
        <item> S5</item>
        <item>S6</item>
        <item> S7</item>

    </string-array>

    <string-array name="array_Car_Year">
    <item>2001</item>
    <item>2002</item>
    <item>2003</item>
    <item>2004</item>
    <item>2005</item>
    <item>2006</item>
    <item>2007</item>
    <item>2008</item>
    <item>2009</item>
    <item>2010</item>
    <item>2011</item>
    <item>2012</item>
    <item>2013</item>
    <item>2014</item>
    <item>2015</item>
    <item>2016</item>
    <item>2017</item>
    <item>2018</item>
    <item>2019</item>
    <item>2020</item>
    <item>2021</item>
    <item>2022</item>
    </string-array>

    <string-array name="array_Gasoline_Type">
    <item>Select your Fuel Type</item>
    <item>Butane</item>
    <item>Diesel Fuel</item>
    <item>Fuel Oil</item>
    <item>Gasoline</item>
    <item>Keresone</item>
    <item>Propane</item>
    <item>E-gas</item>
    </string-array>



    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_information">Information</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="Car_Information">Car Information</string>
    <string name="Car_Make">Carr Make</string>
    <string name="Car_Model">Car Model</string>
    <string name="Car_Year">Car Year</string>
    <string name="Type_Gasoline">Gasoline Type</string>
    <string name="menu_sign_out">Sign out</string>
    <string name="menu_Informatio">Information</string>
    <string name="menu_Profile">Profile</string>
</resources>