<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.Information.InformationFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Car_Information"
        android:padding="6dp"
        android:id="@+id/welcome_Text"
        android:textSize="30dp"
        android:textAlignment="center"
        android:textColor="@color/black" />

    <TextView
        android:id="@+id/textView_Car_Make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="6dp"
        android:text="@string/Car_Make"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp" />
    <EditText
        android:id="@+id/spinner_Car_Make"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_below="@id/textView_Car_Make"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Car_Model"
        android:text="@string/Car_Model"
        android:layout_below="@id/spinner_Car_Make"
        android:layout_marginTop="5dp"
        android:padding="6dp"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/spinner_Car_Model"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Car_Model"
        android:layout_marginTop="6dp" />

    <TextView
        android:id="@+id/Car_Year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="235dp"
        android:padding="6dp"
        android:text="@string/Car_Year"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18dp" />

    <EditText
        android:id="@+id/spinner_Car_Year"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@+id/Car_Year" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Gasoline_type"
        android:text="@string/Type_Gasoline"
        android:layout_marginTop="325dp"
        android:padding="6dp"
        android:textSize="18dp"
        android:textAlignment="center"
        android:textColor="@color/black"/>
    <EditText
        android:id="@+id/spinner_Type_Gasoline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/Gasoline_type" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/Submit"
        android:layout_below="@id/spinner_Type_Gasoline"
        android:layout_marginTop="20dp"
        android:text="Submit"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>